<resources>
    <string name="app_name">Voting App</string>
    <string name="title">Welcome to the Voting App</string>
    <string name="userID">ID:</string>
    <string name="userPassword">Password:</string>
    <string name="login">Login</string>
    <string name="new_user">Register</string>
    <string name="returning_user"><u>Returning User</u></string>
    <string name="new_user_label">New User?</string>
    <string name="zip_code">ZIP Code:</string>
    <string name="state">State:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="middle_name">Middle Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="arrow_pointing_down_towards_the_home_button">Arrow pointing down towards the home button.</string>
    <string name="add_fingerprint_below">Add Fingerprint Below</string>
    <string name="btnRegister">Submit</string>
    <string name="editTextBDay">MM/DD/YYYY</string>
    <string name="txtTitleRegistration">Registration</string>
    <string name="editTextZIPCode">#####</string>
    <string name="txtFingerprintAuthentication">Fingerprint Authentication</string>
    <string name="txtFingerprintInstructions">Place your fingertip on the home button to verify your identity</string>
    <string name="imgFingerprint">Image of a fingerprint</string>
    <string name="txtTitleBallots">Your Ballots</string>
    <string name="lblBallotList">Available Ballots</string>
    <string name="lblIDBallots">ID #:</string>
    <string name="btnOpenBallot">Open Ballot</string>
    <string name="txtElectionTitle">Election Title</string>
    <string name="rButtonChoice1">Candidate 1</string>
    <string name="rButtonChoice2">Candidate 2</string>
    <string name="btnSubmitBallot">Submit</string>
    <string name="btnPreviousPage">Previous</string>
    <string name="btnNextPage">Next</string>
    <string name="txtPositionName">Position Name</string>
    <string name="txtTitleBallotSummary">Ballot Summary</string>
    <string name="txtPosition1">%1$s %2$s</string>
    <string name="txtChoice1">%1$s %2$s</string>
    <string name="txtPosition2">%1$s %2$s</string>
    <string name="txtChoice2">%1$s %2$s</string>
    <string name="txtPosition3">%1$s %2$s</string>
    <string name="txtChoice3">%1$s %2$s</string>
    <string name="txtPosition4">%1$s %2$s</string>
    <string name="txtChoice4">%1$s %2$s</string>
    <string name="btnBallotSummary"><![CDATA[Submit & Return to Ballots Page]]></string>
    <string name="txtTitleCredits">Credits</string>
    <string name="txtCredit1"><div>Vote icon made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="textCredit2"><div>Fingerprint icon made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="btnCredits">Credits</string>
    <string name="btnReturnHome">Return</string>
    <string name="btnExitApp">Exit App</string>
    <string name="btnLogout">Logout</string>

    <string-array name="state_list">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
</resources>