<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtElectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txtElectionTitle"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNextPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnNextPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnPreviousPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnPreviousPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSubmitBallot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnSubmitBallot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNextPage"
        app:layout_constraintStart_toEndOf="@+id/btnPreviousPage" />

    <TextView
        android:id="@+id/txtPositionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="177dp"
        android:text="@string/txtPositionName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtElectionTitle" />

    <RadioGroup
        android:id="@+id/rGrpChoices"
        android:layout_width="325dp"
        android:layout_height="107dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPositionName">

        <RadioButton
            android:id="@+id/rButtonChoice1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rButtonChoice1" />

        <RadioButton
            android:id="@+id/rButtonChoice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rButtonChoice2"
            app:layout_constraintTop_toBottomOf="@+id/rButtonChoice1" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>