<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTitleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txtTitleRegistration"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="5dp"
        android:labelFor="@id/editTextFName"
        android:text="@string/first_name"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/editTextFName"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleRegister" />

    <EditText
        android:id="@+id/editTextFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleRegister"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextMName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFName"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txtMName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="5dp"
        android:labelFor="@id/editTextMName"
        android:text="@string/middle_name"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/editTextMName"
        app:layout_constraintTop_toBottomOf="@+id/txtFName" />

    <EditText
        android:id="@+id/editTextLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMName"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txtLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="5dp"
        android:labelFor="@id/editTextLName"
        android:text="@string/last_name"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/editTextLName"
        app:layout_constraintTop_toBottomOf="@+id/txtMName" />

    <EditText
        android:id="@+id/editTextBDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/editTextBDay"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLName" />

    <TextView
        android:id="@+id/txtBDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="5dp"
        android:text="@string/date_of_birth"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/editTextBDay"
        app:layout_constraintTop_toBottomOf="@+id/txtLName" />

    <TextView
        android:id="@+id/txtState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="5dp"
        android:labelFor="@id/spnState"
        android:text="@string/state"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/spnState"
        app:layout_constraintTop_toBottomOf="@+id/txtBDay" />

    <EditText
        android:id="@+id/editTextZip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/editTextZIPCode"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnState"
        android:autofillHints="#####" />

    <TextView
        android:id="@+id/txtZip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="5dp"
        android:text="@string/zip_code"
        app:layout_constraintEnd_toStartOf="@+id/editTextZip"
        app:layout_constraintTop_toBottomOf="@+id/txtState" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextZip" />

    <Spinner
        android:id="@+id/spnState"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBDay"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:spinnerMode="dropdown"/>

</androidx.constraintlayout.widget.ConstraintLayout>